[gd_scene load_steps=22 format=2]

[ext_resource path="res://MainScene.gd" type="Script" id=1]
[ext_resource path="res://Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fera.tscn" type="PackedScene" id=3]
[ext_resource path="res://general_theme.tres" type="Theme" id=4]
[ext_resource path="res://ui/ResourceList.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/Itim-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/audio/bgm/main.ogg" type="AudioStream" id=7]
[ext_resource path="res://ParticleEmitter.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/images/buttons/settings_icon.png" type="Texture" id=9]
[ext_resource path="res://settings/Settings.tscn" type="PackedScene" id=10]
[ext_resource path="res://ui/SettingsButton.gd" type="Script" id=11]

[sub_resource type="ButtonGroup" id=15]
resource_name = "Loot"

[sub_resource type="Shader" id=14]
code = "shader_type canvas_item;

void fragment(){
	COLOR.a = smoothstep(0.0, 0.15, 1.0 - UV.y);
}"

[sub_resource type="ShaderMaterial" id=6]
render_priority = 2
shader = SubResource( 14 )

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

void fragment(){
	COLOR.a = smoothstep(0.0, 0.15, UV.y);
}"

[sub_resource type="ShaderMaterial" id=8]
render_priority = 2
shader = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[node name="MainScene" type="Node2D"]
script = ExtResource( 1 )

[node name="ParticlesEmitter" parent="." instance=ExtResource( 8 )]

[node name="Interface" type="HBoxContainer" parent="."]
anchor_right = 200.0
margin_left = 45.0
margin_top = 208.0
margin_right = 310.0
margin_bottom = 608.0
custom_constants/separation = 15

[node name="ScrollContainer" type="ScrollContainer" parent="Interface"]
margin_right = 250.0
margin_bottom = 400.0
rect_min_size = Vector2( 250, 400 )
rect_clip_content = false

[node name="Buttons" type="VBoxContainer" parent="Interface/ScrollContainer"]
margin_right = 170.0
margin_bottom = 540.0
theme = ExtResource( 4 )
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rope" parent="Interface/ScrollContainer/Buttons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 170.0
margin_bottom = 50.0
text = "BUY_ROPE"
id = "buy_rope"
level_unlocked = 1
reward_resource = {
"active": true,
"amount": 1,
"type": "line_length"
}
cost = {
"active": true,
"base_cost": 50,
"exponential_progression": 1.35,
"incremental_cost": 30,
"times_used": 0,
"type": "money"
}

[node name="Rod Quality" parent="Interface/ScrollContainer/Buttons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 70.0
margin_right = 170.0
margin_bottom = 120.0
text = "BUY_ROD"
id = "improve_rod"
reward_resource = {
"active": true,
"amount": 1,
"engine": {
"active": false,
"amount": 0.0,
"type": ""
},
"type": "rod_quality"
}
cost = {
"active": true,
"base_cost": 100,
"exponential_progression": 1.1,
"incremental_cost": 150,
"times_used": 0,
"type": "money"
}

[node name="MoneyEngine" parent="Interface/ScrollContainer/Buttons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 140.0
margin_right = 170.0
margin_bottom = 190.0
text = "BUY_MONEYENGINE"
id = "buy_money_engine"
level_unlocked = 1
reward_resource = {
"active": true,
"amount": 1,
"engine": {
"active": true,
"amount": 0.2,
"type": "money"
},
"type": "money_engine"
}
cost = {
"active": true,
"base_cost": 1,
"exponential_progression": 1.1,
"incremental_cost": 1,
"times_used": 0,
"type": "money"
}

[node name="AutoFish" parent="Interface/ScrollContainer/Buttons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 210.0
margin_right = 170.0
margin_bottom = 260.0
text = "BUY_AUTOFISH"
id = "buy_autofish"
level_unlocked = 3
reward_resource = {
"active": true,
"amount": 1,
"engine": {
"active": false,
"amount": 0.0,
"type": ""
},
"type": "auto_fish"
}
cost = {
"active": true,
"base_cost": 2000,
"exponential_progression": 1.2,
"incremental_cost": 0,
"times_used": 0,
"type": "money"
}

[node name="Bait1" parent="Interface/ScrollContainer/Buttons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 280.0
margin_right = 170.0
margin_bottom = 330.0
text = "BUY_BAIT1"
id = "buy_bait1"
reward_resource = {
"active": true,
"amount": 1,
"type": "bait_1"
}
cost = {
"active": true,
"base_cost": 10,
"exponential_progression": 1.2,
"incremental_cost": 0,
"times_used": 0,
"type": "money"
}

[node name="Bait2" parent="Interface/ScrollContainer/Buttons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 350.0
margin_right = 170.0
margin_bottom = 400.0
text = "BUY_BAIT2"
id = "buy_bait1"
level_unlocked = 2
reward_resource = {
"active": true,
"amount": 1,
"type": "bait_2"
}
cost = {
"active": true,
"base_cost": 100,
"exponential_progression": 1.2,
"incremental_cost": 0,
"times_used": 0,
"type": "money"
}

[node name="Bait3" parent="Interface/ScrollContainer/Buttons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 420.0
margin_right = 170.0
margin_bottom = 470.0
text = "BUY_BAIT3"
id = "buy_bait1"
level_unlocked = 3
reward_resource = {
"active": true,
"amount": 1,
"type": "bait_3"
}
cost = {
"active": true,
"base_cost": 300,
"exponential_progression": 1.2,
"incremental_cost": 0,
"times_used": 0,
"type": "money"
}

[node name="Beg" parent="Interface/ScrollContainer/Buttons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 490.0
margin_right = 170.0
margin_bottom = 540.0
cooldown = 0.2
text = "BEG"
id = "fishing"
reward_resource = {
"active": true,
"amount": 1,
"type": "money"
}
fake_cost = "DIGNITY"

[node name="ResourceList" parent="Interface" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 265.0
margin_right = 265.0
margin_bottom = 400.0
mouse_filter = 1
loot_group = SubResource( 15 )

[node name="UpperHidder" type="ColorRect" parent="."]
material = SubResource( 6 )
margin_right = 1280.0
margin_bottom = 192.0

[node name="LowerHidder" type="ColorRect" parent="."]
material = SubResource( 8 )
margin_top = 610.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="NoBaitSelected" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 307.0
margin_top = 570.0
margin_right = 932.996
margin_bottom = 618.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "NO_BAIT"

[node name="Fera" parent="." instance=ExtResource( 3 )]
margin_left = 15.1361
margin_top = -11.7726
margin_right = 15.1361
margin_bottom = -11.7726

[node name="UpperButtons" type="HBoxContainer" parent="."]
margin_left = 479.0
margin_top = 47.0
margin_right = 1157.0
margin_bottom = 132.0
custom_constants/separation = 58
alignment = 1

[node name="Fishing" parent="UpperButtons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 26.0
margin_right = 196.0
margin_bottom = 85.0
rect_min_size = Vector2( 170, 85 )
cooldown = 5.0
text = "FISH"
id = "fishing"
reward_resource = {
"active": false,
"amount": 0,
"type": ""
}
cost = {
"active": true,
"base_cost": 1,
"exponential_progression": 1.0,
"incremental_cost": 0,
"times_used": 0,
"type": "bait"
}
fake_cost = "ONE_BAIT"

[node name="Final" parent="UpperButtons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 254.0
margin_right = 424.0
margin_bottom = 85.0
text = "BUY_FREEDOM"
id = "buy_ending"
level_unlocked = 4
reward_resource = {
"active": false,
"amount": 1,
"engine": {
"active": false,
"amount": 0.0,
"type": ""
},
"type": "buy_ending"
}
cost = {
"active": true,
"base_cost": 999999,
"exponential_progression": 1.2,
"incremental_cost": 0,
"times_used": 0,
"type": "money"
}

[node name="Final2" parent="UpperButtons" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 482.0
margin_right = 652.0
margin_bottom = 85.0
text = "BUY_FREEDOM2"
id = "buy_ending2"
level_unlocked = 4
reward_resource = {
"active": false,
"amount": 1,
"engine": {
"active": false,
"amount": 0.0,
"type": ""
},
"type": "buy_ending2"
}
cost = {
"active": true,
"base_cost": 1,
"exponential_progression": 1.0,
"incremental_cost": 0,
"times_used": 0,
"type": "money"
}

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
bus = "BGM"

[node name="SettingsButton" type="Button" parent="."]
margin_left = 1215.0
margin_top = 14.0
margin_right = 1266.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 25.5, 25.5 )
focus_mode = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
enabled_focus_mode = 0
icon = ExtResource( 9 )
script = ExtResource( 11 )

[node name="Settings" parent="." instance=ExtResource( 10 )]
visible = false
enable_quit = true

[connection signal="no_bait_selected" from="UpperButtons/Fishing" to="." method="_on_Fishing_no_bait_selected"]
[connection signal="mouse_entered" from="SettingsButton" to="." method="_on_SettingsButton_mouse_entered"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]

[editable path="Settings"]
[editable path="Settings/VB/BGMSound"]
[editable path="Settings/VB/SFXSound"]
[editable path="Settings/VB/NarrationSound"]
[editable path="Settings/VB/Happiness"]
